istio/new/yaml/2-Traffic-Ending/6-istio-rules.yaml
apiVersion: networking.istio.io/v1 # v1beta1에서 v1으로 변경
kind: VirtualService
metadata:
  name: staff-service-routing
  namespace: default
spec:
  hosts:
    - fleetman-staff-service # 같은 네임스페이스면 짧게 표기 가능
  http:
    - route:
        - destination:
            host: fleetman-staff-service
            subset: safe-group
          weight: 90
        - destination:
            host: fleetman-staff-service
            subset: risky-group
          weight: 10
---
apiVersion: networking.istio.io/v1 # v1beta1에서 v1으로 변경
kind: DestinationRule
metadata:
  name: staff-service-destination
  namespace: default
spec:
  host: fleetman-staff-service
  subsets:
    - name: safe-group
      labels:
        version: safe
    - name: risky-group
      labels:
        version: risky


--- #gateway-api 형식  (VirtualService 대체)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: staff-service-routing
  namespace: default
spec:
  parentRefs:
    - name: istio-gateway # 연결할 Gateway 리소스 이름
  hostnames:
    - "fleetman-staff-service"
  rules:
    - backendRefs:
        - name: fleetman-staff-service
          port: 80
          weight: 90
          filters:
            - type: ExtensionRef
              extensionRef:
                group: networking.istio.io
                kind: DestinationRule
                name: staff-service-destination # 아래 Subset 매핑을 위해 필요
        - name: fleetman-staff-service
          port: 80
          weight: 10
          filters:
            - type: ExtensionRef
              extensionRef:
                group: networking.istio.io
                kind: DestinationRule
                name: staff-service-destination
