istio/new/yaml/2-Traffic-Ending/7-istio-rules-stickiness-demo.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: staff-service-routing
  namespace: default
spec:
  hosts:
    - fleetman-staff-service
  http:
    - route:
        - destination:
            host: fleetman-staff-service
            subset: all-staff-service-pods
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: staff-service-lb-policy
  namespace: default
spec:
  host: fleetman-staff-service
  trafficPolicy:
    loadBalancer:
      # 핵심: x-myval 헤더값에 따라 특정 파드로 고정해서 보냄
      consistentHash:
        httpHeaderName: "x-myval"
  subsets:
    - name: all-staff-service-pods
      labels:
        app: staff-service

--- #gateway-api####################################

# 1. 라우팅 규칙 (VirtualService 대체)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: staff-service-route
  namespace: default
spec:
  parentRefs:
  - name: ingress-gateway # 실제 사용하는 Gateway 이름 입력
  hostnames:
  - "fleetman-staff-service" # 혹은 외부 도메인
  rules:
  - backendRefs:
    - name: fleetman-staff-service
      port: 80
      # DestinationRule의 subset 설정을 따르거나, 
      # 단순히 Service로 보내고 아래 DestinationRule 정책을 적용받게 함
